# website-matheusfabiao

./: pyproject.toml
core/: settings.py  urls.py
institutional/: apps.py  views.py
static/css/: extends.css  globals.css  variables.css
static/css/components/: navbar.css  preloader.css
static/css/institutional/: home.css
static/js/: main.js
templates/: base.html
templates/components/: navbar.html
templates/institutional/: home.html
